# UFRRJ-CG

./: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/include/Input/: IInputManager.hpp  SDLInput.hpp
Engine/include/Util/: AssimpLoader.hpp  FS.hpp  ObjLoader.hpp
Engine/include/Video/: FlyCamera.hpp  Mesh.hpp  Model.hpp  Program.hpp  Texture.hpp  Window.hpp
Engine/src/Input/: SDLInput.cpp
Engine/src/Util/: AssimpLoader.cpp  ObjLoader.cpp
Engine/src/Video/: Mesh.cpp  Model.cpp  Program.cpp  Texture.cpp  Window.cpp
GLSL/: bumpmapped_mesh.frag  bumpmapped_mesh.vert  fullbright.frag  parallaxmapped_mesh.frag  simple_mesh.frag  simple_mesh.vert
